<resources>
    <string name="app_name">SMA1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input">Input</string>
    <string name="go_to_third">Go to third</string>
    <string name="go_to_second">Go to second</string>
    <string name="no_data_provided">No data provided</string>
    <string name="data">Data: %1$s</string>
    <string name="save">Save</string>
    <string name="go_to_bottom_sheet">Go to bottom sheet</string>
    <string name="add">Add</string>
    <string name="add_multi">Add multi</string>
    <string name="delete_multi">Delete multi</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="not_found_this_id">Not found this id: %1$s</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_question">Delete %1$s?</string>
    <string name="survey_question_text">Who invented Android?</string>
    <string name="page_count">%1$d/%2$d</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="answers_saved">Answers saved</string>
    <string name="avatar">Avatar</string>
    <string name="input_text">Input text</string>
    <string name="header_of_notification">Header of notification</string>
    <string name="body_of_notification">Body of notification</string>
    <string name="priority_of_notification">Priority of notification</string>
    <string name="choose_option">Choose option</string>
    <string name="show_notification">Show notification</string>
    <string name="clear_theme">Clear theme</string>
    <string name="avatar_is_already_set">Avatar is already set</string>
    <string name="test_notification_channel">Test</string>
    <string name="empty_header">Empty header</string>
    <string name="empty_body">Empty body</string>
    <string name="max_importance">Max</string>
    <string name="high_importance">High</string>
    <string name="default_importance">Default</string>
    <string name="low_importance">Low</string>
    <string name="min_importance">Min</string>
    <string name="please_fill_notification_header">Please fill notification header</string>
    <string name="please_fill_notification_body">Please fill notification body</string>
    <string name="please_fill_priority">Please fill priority</string>
    <string name="launched_from_notification">Launched from notification</string>
    <string name="select_pool">Select pool</string>
    <string name="coroutine_hiding_logic">Coroutine hiding logic</string>
    <string name="continue_word">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="coroutine_type">Coroutine type</string>
    <string name="parallel">Parallel</string>
    <string name="sequential">Sequential</string>
    <string name="invalid_value">Invalid value</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="please_give_notification_permission">Please give notification permission</string>
    <string name="start">Start</string>
    <string name="unconfined">Unconfined</string>
    <string name="default_word">Default</string>
    <string name="io">IO</string>
    <string name="main">Main</string>
    <string name="process_is_not_running">Process is not running</string>
    <string name="cancelled_coroutines">Cancelled %1$d coroutines</string>
    <string name="process_is_already_running">Process is already running</string>
    <string name="exception">Exception: %1$s</string>
</resources>